# rsnapshot

./: .gitmodules
rpm/: rsnapshot.spec  rsnapshot.yaml
sailfish-config/: CMakeLists.txt  home_default.exclude  rootfs_default.exclude  rsnapshot-user-daily.timer  rsnapshot-user-monthly.timer  rsnapshot-user-weekly.timer  rsnapshot-user.target  rsnapshot-user@.service  rsnapshot.conf.sailfish_lvm.in  rsnapshot.conf.sailfish_user.in
